# cdnsrdr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cdnsrdr.sln  cdnsrdr.vcxproj  cdnsrdr.vcxproj.filters
.github/workflows/: ci-tests-clang.yml  ci-tests-macos.yml  ci-tests.yml
cdnstestapp/: cdnstestapp.vcxproj  cdnstestapp.vcxproj.filters
lib/: cbor.cpp  cbor.h  cdns.cpp  cdns.h
test/: CborTest.cpp  CborTest.h  CdnsTest.cpp  CdnsTest.h  CdnsTestApp.cpp  cdns_test_class.cpp  cdns_test_class.h
test/cdnstestapp/: cdnstestapp.vcxproj  cdnstestapp.vcxproj.filters
test/data/: cdns_test_ref.txt  cdns_test_ref_gold.txt  cdns_test_ref_rfc.txt  gold.cbor
